--- a/support_files/todo.txt
+++ b/support_files/todo.txt
@@ -70,14 +70,17 @@ x modificare .c e .h per encoder
       x configurare il driver in modo che legga la configurazione all'avvio e generi il pinout di conseguenza
     x introdurre nell'init anche l'informazione su qual è l'indirizzo base del primo registro, per adattare la mappa dei registri a espansioni future
     - aggiungere filtro variabile agli encoders
-    - automatizare la creazione della configurazione del firmware usando un file di testo
+    x automatizare la creazione della configurazione del firmware usando un file di testo
+    x pulire i tipi delle definizioni della configurazione
+    x migliorare il file ini con il valore del numero di periferiche e un cross check sul numero di periferiche vs le loro definizioni
     - configuratore visuale delle periferiche
       - dearpygui
-      - nel py chiedere se avviare il configuratore
+      x nel py chiedere se avviare il configuratore, o in alternativa aggiungere opzioni 
+        da riga di comando per leggere la configurazione da ini file o avviare la gui
       - il configuratore consente di definire periferiche e pins
       - verifica la coerenza dei valori
       - all'uscita fa partire la generazione del firmware con le definizioni create nella gui
-      - salva la configurazione in un file di testo
+      x salva la configurazione in un file di testo
     x consentire l'esecuzione di + istanze del driver
     x configurare l'ip all'invocazione di hal
     - allocare un certo numero di pins per definire in hw l'indirizzo ip
